# helpdesk

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  checklog-odoo.cfg
helpdesk_mgmt/: README.rst  __manifest__.py
helpdesk_mgmt_activity/: README.rst
helpdesk_mgmt_crm/: README.rst
helpdesk_mgmt_fieldservice/: README.rst  __manifest__.py
helpdesk_mgmt_fieldservice_equipment_warranty/: README.rst
helpdesk_mgmt_merge/: README.rst
helpdesk_mgmt_portal_follower/: README.rst  __manifest__.py
helpdesk_mgmt_project/: README.rst  __manifest__.py
helpdesk_mgmt_project_domain/: README.rst  __manifest__.py
helpdesk_mgmt_project_stage/: README.rst  __manifest__.py
helpdesk_mgmt_rating/: README.rst  __manifest__.py
helpdesk_mgmt_sale/: README.rst  __manifest__.py
helpdesk_mgmt_sale_project/: README.rst
helpdesk_mgmt_sla/: README.rst  __manifest__.py
helpdesk_mgmt_stage_validation/: README.rst
helpdesk_mgmt_team_partner/: README.rst  __manifest__.py
helpdesk_mgmt_template/: README.rst  __manifest__.py
helpdesk_mgmt_timesheet/: README.rst  __manifest__.py
helpdesk_motive/: README.rst  __manifest__.py
helpdesk_portal_priority/: README.rst  __manifest__.py
helpdesk_portal_restriction/: README.rst
helpdesk_product/: README.rst  __manifest__.py
helpdesk_ticket_close_inactive/: README.rst  __manifest__.py
helpdesk_ticket_open_tab/: README.rst
helpdesk_ticket_partner_response/: README.rst  __manifest__.py
helpdesk_ticket_related/: README.rst
helpdesk_type/: README.rst  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+254 files in other folders)
